# SoccerAPI

./: .gitignore  .pre-commit-config.yaml  LICENSE.txt  README.md  main.py  requirements-dev.txt  requirements.txt  setup.cfg  soccerapi.py
docs/: api.rst  conf.py  index.rst  quickstart.rst  tutorials.rst
docs/_build/doctrees/: api.doctree  environment.pickle  index.doctree  quickstart.doctree  tutorials.doctree
docs/_build/html/: .buildinfo  api.html  genindex.html  index.html  objects.inv  py-modindex.html  quickstart.html  search.html  searchindex.js  tutorials.html
docs/_build/html/_sources/: api.rst.txt  quickstart.rst.txt  tutorials.rst.txt
docs/_build/html/_static/css/: custom.css
docs/_static/css/: custom.css
lib/: fapi.py  fbref.py  postgres.py  schema.py  tm.py  understat.py  utils.py  visualize.py
scripts/: get_leagues.py  get_players.py  get_teams.py
soccerapi/: __init__.py  soccerapi.py
soccerapi/lib/: fapi.py  fbref.py  postgres.py  ratelimiter.py  schema.py  scouting.py  tm.py  understat.py  utils.py  visualize.py
