# -*- coding: utf-8 -*-

[metadata]
name=soccerapi
# version needs setuptools >= 39.2.0
version=0.0.0
license=GPLv3+
description=
long_description=file: README.md
long_description_content_type=text/markdown
author=Jason Zielinski
author_email=
keywords=
    utilities
    text
    command
url=
classifiers=
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Topic :: Software Development :: Libraries
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Programming Language :: Python :: 3

[options]
python_requires = >=3.7, <4
install_requires = file: requirements.txt
packages=find:

[options.packages.find]
exclude=
    *tests*

[options.package_data]
* = *.txt, *.rst

[yapf]
based_on_style = pep8
indent_width = 4

[flake8]
ignore =
    E125
    E131
    E501
    W503
    W504
    F401

[isort]
# See
# https://github.com/ESMValGroup/ESMValCore/issues/777
multi_line_output = 3
include_trailing_comma = true

[tox:tox]
requires =
    tox>=4
env_list = py{37,38,39,310,311,312,313}
